--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,8 @@
         <div class="main-content">
             {{>header}}
             <img class="potrait" src="./img/photo.jpg">
+
+            <p>This site is created by Shweta.It uses data from mapbox and weatherstack</p>
         </div>
         
        <!-- <p>Created by {{name}}</p>-->
